# PointCloud-PyUsage

./: .gitignore  .pre-commit-config.yaml  .precommit.toml  MANIFEST.in  README.md  demo.py  install.sh  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
Filter/: CMakeLists.txt  package.xml  pointcloud_filter.cpp
amUtils/: requirements.txt  setup.py  setup_cpu.py  setup_cuda.py  version.py
amUtils/dataset_utils/: calibration.py  calibration_kitti.py  calibration_livox.py  object3d_kitti.py
amUtils/pointcloud_io/: CMakeLists.txt  load_pcd_file_pcl.cpp  pointcloud_io.py  publish_pointcloud.py  pybind_pcl_readme.md  save_pcd_file_pcl.cpp  subscribe_pointcloud.py
amUtils/pointcloud_vis/: intensity_to_color.py
amUtils/ros_numpy/: point_cloud2.py
ampcl/calibration/: __init__.py  calibration.py  calibration_kitti.py  calibration_livox.py  calibration_template.py  experiment.py  object3d.py  object3d_kitti.py  transform.py
ampcl/data/: pointcloud.txt
ampcl/detection/: REAMDE.md  __init__.py  simple_yolov5.py
ampcl/filter/: CMakeLists.txt  __init__.py  bounding_box_filter.py  passthrough_filter.py  plane_fitting.py  pointcloud_filter_pyb.py  sensor_filter.py  voxel_based_filter.py
ampcl/filter/src/: filter_pyb.cpp
ampcl/io/: CMakeLists.txt  __init__.py  pointcloud_io.py  pointcloud_io_pyb.py
ampcl/io/src/: io_pyb.cpp
ampcl/metrics/: __init__.py  kitti_metrics.py  rotate_iou.py
ampcl/ops/roiaware_pool3d/: roiaware_pool3d_utils.py
ampcl/perception/: CMakeLists.txt  README.md  __init__.py  ground_segmentation.py  ground_segmentation_pybind.py  range_based_cluster.py  shape_estimation.py
ampcl/perception/docs/: awesome_cluster_segmentation.md  awesome_ground_segmentation.md
ampcl/perception/src/: euclidean_cluster_pyb.cpp  gpf_pyb.cpp  range_img_cluster_pyb.cpp
ampcl/ros/: README.md  __init__.py
ampcl/ros/ddynamic_reconfigure_python/: ddynamic_reconfigure.py  example.py
ampcl/ros/marker/: README.md  __init__.py  create_marker.py
ampcl/ros/marker/data/model/: car.dae
ampcl/ros/publisher/: README.md  __init__.py  img_publisher.py  pc_publisher.py
ampcl/ros/ros2_numpy/: __init__.py  geometry.py  occupancy_grid.py
ampcl/ros/ros_numpy/: __init__.py  occupancy_grid.py
ampcl/ros/video2bag/: setup.py
ampcl/ros_utils/: __init__.py
ampcl/ros_utils/ddynamic_reconfigure_python/: class_example.py
ampcl/ros_utils/img2rosbag/: img2rosbag.py
ampcl/ros_utils/ros2_numpy/: image.py  point_cloud2.py
ampcl/ros_utils/ros_numpy/: geometry.py  image.py  point_cloud2.py  registry.py
ampcl/ros_utils/video2bag/: README.md
ampcl/ros_utils/video2bag/video2bag/: utils.py
ampcl/scenario_vis/3dod/: example.py  open3d_vis_utils.py  visualize_pcdet_result.py
ampcl/tracking/ab3dmot/: __init__.py  ab3dmot.py  bbox_coarse_hash.py  box.py  dist_metrics.py  kalman_filter.py  matching.py  nms.py  utils.py
ampcl/visualization/: __init__.py  intensity_to_color.py  o3d_viewer.py  painter.py
dataset/metrics/: README.md
dataset/metrics/livox/: eval.py  evaluate.py  kitti_common.py
dataset/preprocess/: calculate_stats_info_based_on_kitti_label.py  generate_ground_plane.py  plot_stats.py  transform_label_format_livox_to_kitti.py  update_label.py
dataset/visualization/object3d_detection/: common_utils.py  example.py  kitti.rviz  kitti_ros1.rviz  kitti_ros2.rviz  visualize_kitti_ros.py  visualize_livox_ros.py
dataset/visualization/object3d_detection/config/: kitti.yaml  livox.yaml
dataset/visualization/object3d_detection/data/model/: car.dae
dataset/visualization/stereo/: dis2pointcloud.py
dataset_visualization/3D_object_detection/: common_utils.py  kitti_ros2.rviz  visualize_kitti_ros.py  visualize_livox_dataset.py  visualize_livox_ros.py  visualize_pcdet_result_ros.py  visualize_pcdet_result_ros1.py  visualize_pcdet_result_ros2.py
dataset_visualization/3D_object_detection/config/: kitti.yaml  livox.yaml
map/: README.md  cc-converter.py  prepross_map.py
map/gps_to_odometry/: gps_to_odometry.py  rviz.rviz
ops/roiaware_pool3d/: roiaware_pool3d_utils.py
perception/: README.md  kitti_ros2.rviz  ros2_traditional_perception_kitti.py  traditional_perception.py
perception/config/: kitti.yaml
perception/shape_estimation/: convex_hull.py
pointcloud_io/: CMakeLists.txt  README.md  pointcloud_io.py  pybind_pcl_readme.md
pointcloud_vis/: intensity_to_color.py
pointcloud_vis/data/: single_pointcloud.npy
ros/: README.md  common_utils.py  livox_converter_ros2.py  ros2_rosbag2pcd.py
ros/rosbag2video/: README.md  rosbag2video.py
ros/video2bag/video2bag/: main.py
ros_numpy/: point_cloud2.py
sensors/calibration/lidar2camera/: README.md  cal_experiment.py  calib_parameter.txt  common.py  manual_calibration_ros1.py  manual_calibration_ros2.py  rviz1.rviz  rviz2.rviz
sensors/converter/: README.md  livox_converter_ros2.py
video/: README.md
visualize/3dod/: example.py  open3d_vis_utils.py  visualize_livox_dataset.py  visualize_pcdet_result.py
visualize/3dod/data/calib/: 000000.txt
visualize/3dod/data/label_2/: 000000.txt
visualize/stereo/: dis2pointcloud.py
