[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ampcl"
version = "0.0.1"
authors = [
    { name = "Hongqian Hunag", email = "hong877381@gmail.com" },
]
description = "A small example package"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 2 - Pre-Alpha",
    "Operating System :: Unix"
]
requires-python = ">=3.7"

dependencies = [
    "colorama",
    "funcy",
    "numba",
    "open3d; python_version<'3.10'",
    "requests",
    "scipy>=1.4",
    "setuptools>=64.0",
]

[project.scripts]
o3d_viewer = "ampcl.visualization.o3d_viewer:main"

[project.urls]
"Homepage" = "https://github.com/Natsu-Akatsuki/PointCloud-PyUsage"
